--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build",                       
+    "preview": "vite preview --host --port 4173",
+
+    "predeploy": "cross-env BASE_PATH=/majitunagu/ vite build && copy out\\index.html out\\404.html",
+    "deploy": "gh-pages -d out"
   },
+
   "dependencies": {
     "@stripe/react-stripe-js": "4.0.2",
     "@supabase/supabase-js": "2.57.4",
