--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
-    "build": "vite build",                       
+    "build": "vite build", 
     "preview": "vite preview --host --port 4173",
-
-    "predeploy": "cross-env BASE_PATH=/majitunagu/ vite build && copy out\\index.html out\\404.html",
-    "deploy": "gh-pages -d out"
+    "predeploy": "cross-env BASE_PATH=/majitunagu/ vite build && node -e \"require('fs').copyFileSync('out/index.html','out/404.html')\"",
+    "deploy": "gh-pages -d out -b gh-pages -t true"
   },
 
   "dependencies": {
@@ -32,9 +30,11 @@
     "@vitejs/plugin-react": "^5.0.4",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "source-map": "^0.7.6",
